2008-07-17  <anithra@linux.vnet.ibm.com>

	* main.cxx (handle_interrupt): Forward received signal to process
	group.

2008-07-17  Masami Hiramatsu <mhiramat@redhat.com>

	* systemtap.spec (%files): Add stap-server and stap-serverd.
	(%files runtime): Add stap-client.

2008-07-17  David Smith  <dsmith@redhat.com>

	* systemtap.spec: Moved comment that was on the same line as
	"Version", which rpmbuild didn't like.

2008-07-17  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (dump_unwindsyms): Produce symbol tables and section
	lists for all text-like sections, useful for -ffunction-sections type
	kernel modules.
	(emit_symbol_data): Tolerate missing unwind/symbol data during
	elf processing.  Subsequently warn about anything missing.

2008-07-16  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Bumped version to 0.7.1.
	* systemtap.spec: Renamed from systemtap.spec.in; don't autoconf it
	just on account of @VERSION@.
	* Makefile.am (EXTRA_DIST): Distribute it.
	* Makefile.in, configure, testsuite/configure: Regenerated.

2008-07-16  Dave Brolley  <brolley@redhat.com>

	* Makefile.am (EXTRA_DIST): Add stap-client, stap-server, stap-serverd.
	* Makefile.in: Regenerated.

2008-07-14  David Smith  <dsmith@redhat.com>

	* tapsets.cxx
	(utrace_var_expanding_copy_visitor::visit_target_symbol):
	Synthesize a function to get the value of $syscall.

2008-07-14  Dave Brolley  <brolley@redhat.com>

	* Makefile.am (bin_SCRIPTS): Add stap-client, stap-server, stap-serverd.
	* Makefile.in: Regenerated.
	* aclocal.m4: Regenerated.

2008-07-12  Frank Ch. Eigler  <fche@elastic.org>

	PR 6738.
	* buildrun.cxx (compile_pass): Add autoconf-uaccess.c.
	* translate.cxx (translate_pass): #include <linux/vermagic.h> for
	maximum version compatibility for UTS_RELEASE.

2008-07-12  Frank Ch. Eigler  <fche@elastic.org>

	By Andy Fitzsimon <afitzsim@redhat.com>:
	* smileytap.svg: New file.

2008-07-11  Frank Ch. Eigler  <fche@elastic.org>

	PR 6739