@@ -1,3 +1,8 @@
+2008-07-17  Stan Cox  <scox@redhat.com>
+
+	* tapsets.cxx (iterate_over_srcfile_lines): Avoid statement wildcard
+	lines without a unique address.
+
 2008-07-17  <anithra@linux.vnet.ibm.com>
 
 	* main.cxx (handle_interrupt): Forward received signal to process
